--- a/index.html
+++ b/index.html
@@ -5,32 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Strona</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
         body {
             background-color: #121212;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             text-align: center;
-            padding: 50px;
+            flex-direction: column;
         }
-        a {
-            color: #1e90ff;
-            text-decoration: none;
-        }
+
         .container {
-            max-width: 600px;
-            margin: auto;
-            padding: 20px;
-            border-radius: 10px;
             background-color: #1e1e1e;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.2);
+            transition: transform 0.3s ease-in-out;
+            width: 350px;
+        }
+
+        .container:hover {
+            transform: scale(1.05);
+        }
+
+        h1 {
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font-size: 18px;
+            margin-bottom: 15px;
+        }
+
+        .buttons a {
+            display: block;
+            background: #1e90ff;
+            color: white;
+            text-decoration: none;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 8px;
+            font-size: 20px;
+            transition: 0.3s;
+        }
+
+        .buttons a:hover {
+            background: #0f6cd4;
+            transform: scale(1.1);
+        }
+
+        .image-box {
+            margin-top: 20px;
+            border: 5px solid #fff;
+            border-radius: 12px;
+            overflow: hidden;
+            width: 100%;
+        }
+
+        .image-box img {
+            width: 100%;
+            display: block;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Witaj na mojej stronie!</h1>
-        <p><strong>Discord:</strong> 864948534289629214</p>
-        <p><strong>GitHub:</strong> <a href="#" target="_blank">Mój profil GitHub</a></p>
+        <p>Znajdziesz mnie tutaj:</p>
+        <div class="buttons">
+            <a href="https://github.com/MrFratczak" target="_blank">🔹 GitHub</a>
+            <a href="https://discordapp.com/users/864948534289629214" target="_blank">💬 Discord</a>
+            <a href="https://www.tiktok.com/@k4p1chu_" target="_blank">🎵 TikTok</a>
+        </div>
+        <div class="image-box">
+            <img src="cashman.png" alt="Zdjęcie">
+        </div>
     </div>
 </body>
 </html>
