--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Strona</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -12,11 +13,18 @@
             <img src="juicewrld.jpg" alt="Profilowe" class="avatar">
             <h1>K4p1chu</h1>
             <p>Znajdziesz mnie tutaj:</p>
-            <div class="social-links">
-                <a href="https://github.com/MrFratczak" class="github" target="_blank">GitHub</a>
-                <a href="https://discordapp.com/users/864948534289629214" class="discord" target="_blank">Discord</a>
-                <a href="https://www.tiktok.com/@k4p1chu_" class="tiktok" target="_blank">TikTok</a>
-            </div>
+        </div>
+
+        <div class="social-links">
+            <a href="https://github.com/MrFratczak" class="social github" target="_blank">
+                <i class="fab fa-github"></i> <span>GitHub</span>
+            </a>
+            <a href="https://discordapp.com/users/864948534289629214" class="social discord" target="_blank">
+                <i class="fab fa-discord"></i> <span>Discord</span>
+            </a>
+            <a href="https://www.tiktok.com/@k4p1chu_" class="social tiktok" target="_blank">
+                <i class="fab fa-tiktok"></i> <span>TikTok</span>
+            </a>
         </div>
     </div>
 </body>
