--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
 
         <div class="social-links">
-            <a href="https://github.com/MrFratczak" class="social github" target="_blank">
-                <i class="fab fa-github"></i> <span>GitHub</span>
+            <a href="https://github.com/K4p1chuu" class="social github" target="_blank">
+                <img src="github.png" alt="GitHub"> <span>GitHub</span>
             </a>
             <a href="https://discordapp.com/users/864948534289629214" class="social discord" target="_blank">
-                <i class="fab fa-discord"></i> <span>Discord</span>
+                <img src="discord.png" alt="Discord"> <span>Discord</span>
             </a>
             <a href="https://www.tiktok.com/@k4p1chu_" class="social tiktok" target="_blank">
-                <i class="fab fa-tiktok"></i> <span>TikTok</span>
-            </a>
+                <img src="tiktok.png" alt="TikTok"> <span>TikTok</span>
+            </a>            
         </div>
     </div>
 </body>
