--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <a href="https://www.tiktok.com/@k4p1chu_" class="social tiktok" target="_blank">
                 <img src="tiktok.png" alt="TikTok"> <span>TikTok</span>
             </a>            
+            <a href="mailto:Kapixu.2233@gmail.com" class="social email">
+                <i class="fas fa-envelope"></i> <span>E-mail</span>
+            </a>
+            
         </div>
     </div>
 </body>
