--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
             
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script>
+particlesJS("particles-js", {
+    particles: {
+        number: { value: 100 },
+        size: { value: 3 },
+        move: { speed: 2 },
+        color: { value: "#ffffff" },
+        line_linked: { enable: true, distance: 150, color: "#ffffff" }
+    }
+});
+</script>
+
 </body>
+<div id="particles-js"></div>
 </html>
