--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script>
-particlesJS("particles-js", {
-    particles: {
-        number: { value: 100 },
-        size: { value: 3 },
-        move: { speed: 2 },
-        color: { value: "#ffffff" },
-        line_linked: { enable: true, distance: 150, color: "#ffffff" }
-    }
-});
-</script>
-
+    <script>
+    particlesJS("particles-js", {
+        particles: {
+            number: { value: 150 }, /* Więcej cząsteczek */
+            size: { value: 4 }, /* Większe cząsteczki */
+            move: { speed: 3 }, /* Szybszy ruch */
+            opacity: { value: 0.8 }, /* Bardziej widoczne */
+            color: { value: "#ffffff" },
+            line_linked: { enable: true, distance: 120, color: "#ffffff" }
+        }
+    });
+    </script>
+    
 </body>
 <div id="particles-js"></div>
 </html>
