--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                 <img src="tiktok.png" alt="TikTok"> <span>TikTok</span>
             </a>            
             <a href="mailto:Kapixu.2233@gmail.com" class="social email">
-                <i class="fas fa-envelope"></i> <span>E-mail</span>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Gmail_Icon.svg" alt="Gmail" class="icon"> 
+                <span>E-mail</span>
             </a>
+            
             
         </div>
     </div>
