--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="juicewrld.jpg" alt="Profilowe" class="avatar">
+            <img src="juiceworld1.png" alt="Profilowe" class="avatar">
             <h1>K4p1chu</h1>
             
             <div class="timezone">
