--- a/index.html
+++ b/index.html
@@ -83,14 +83,12 @@
                     document.body.classList.add("loaded");
                 });
                 </script>  
-                <div class="music-widget">
-                    <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="450" 
-                            style="width:100%;max-width:660px;overflow:hidden;background:transparent;" 
-                            sandbox="allow-forms allow-popups allow-same-origin allow-scripts 
-                            allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" 
-                            src="https://embed.music.apple.com/pl/playlist/k4p1chuu/pl.u-gxblgd1TxrBpxLa">
-                    </iframe>
-                </div>
+<iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="450" 
+style="width:100%;max-width:660px;overflow:hidden;background:transparent;" 
+sandbox="allow-same-origin allow-scripts allow-popups allow-forms" 
+src="https://embed.music.apple.com/pl/playlist/k4p1chuu/pl.u-gxblgd1TxrBpxLa">
+</iframe>
+
                                
 </body>
 </html>
